{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 15,
  "lineage": "6d72d2b3-6b27-b7b3-6aa1-6d9b9f16cfc6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3218d7c2fef8c7d",
            "arn": "arn:aws:ec2:sa-east-1:317006682323:elastic-ip/eipalloc-0c3218d7c2fef8c7d",
            "association_id": "eipassoc-0bb6a1a2e5043114a",
            "domain": "vpc",
            "id": "eipalloc-0c3218d7c2fef8c7d",
            "instance": "i-0222028da3d777307",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0f62e48d283ae2414",
            "private_dns": "ip-10-0-1-195.sa-east-1.compute.internal",
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-18-228-124-31.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.124.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-eip-instance1",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-eip-instance1",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ab7316dbf1ea74",
            "arn": "arn:aws:ec2:sa-east-1:317006682323:instance/i-0222028da3d777307",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0222028da3d777307",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Mineclifford-Innovation-Center-instance1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f62e48d283ae2414",
            "private_dns": "ip-10-0-1-195.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-18-228-124-31.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.124.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0357c71cb55362f0e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9d67e6c59eca408",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "instance1",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "instance1",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f01db55341d072a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "module.ssh_keys.tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:internet-gateway/igw-0bdda8ca446319a5e",
            "id": "igw-0bdda8ca446319a5e",
            "owner_id": "317006682323",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-igw",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-igw",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "vpc_id": "vpc-05652a53f89cb66e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:route-table/rtb-011220ede87cb408d",
            "id": "rtb-011220ede87cb408d",
            "owner_id": "317006682323",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bdda8ca446319a5e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-rt",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-rt",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "timeouts": null,
            "vpc_id": "vpc-05652a53f89cb66e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac164bd13f80a240",
            "route_table_id": "rtb-011220ede87cb408d",
            "subnet_id": "subnet-0e9d67e6c59eca408"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:security-group/sg-00f01db55341d072a",
            "description": "Security group for mineclifford project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f01db55341d072a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow minecraft_bedrock",
                "from_port": 19132,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 19132
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow minecraft_java",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow rcon_web_admin",
                "from_port": 4326,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4326
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow rcon_web_socket",
                "from_port": 4327,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4327
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Mineclifford-Innovation-Center-sg",
            "name_prefix": "",
            "owner_id": "317006682323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-sg",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-sg",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "timeouts": null,
            "vpc_id": "vpc-05652a53f89cb66e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:subnet/subnet-0e9d67e6c59eca408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9d67e6c59eca408",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "317006682323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-subnet",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-subnet",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "vpc_id": "vpc-05652a53f89cb66e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:vpc/vpc-05652a53f89cb66e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c3d723930f60470",
            "default_route_table_id": "rtb-0e0fd2191f01ee4a6",
            "default_security_group_id": "sg-0d998c22c08e5d452",
            "dhcp_options_id": "dopt-08a09264e86b63f7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05652a53f89cb66e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0fd2191f01ee4a6",
            "owner_id": "317006682323",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-vpc",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "Mineclifford-Innovation-Center-vpc",
              "Owner": "minecraft",
              "Project": "Mineclifford-Innovation-Center"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}